--- a/be/package.json
+++ b/be/package.json
@@ -22,7 +22,10 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
-    "mongoose-delete": "^1.0.2"
+    "mongoose-delete": "^1.0.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.15",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
