--- a/be/package.json
+++ b/be/package.json
@@ -26,7 +26,8 @@
     "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
