--- a/fe/package.json
+++ b/fe/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.3",
     "@mui/x-data-grid": "^7.20.0",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
