--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,11 @@
     "@testing-library/user-event": "^14.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-<<<<<<< HEAD
-=======
     "react-fast-marquee": "^1.6.5",
->>>>>>> 5690c0a (header footer)
+    "react-fast-marquee": "^1.6.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.3.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
