--- a/be/package.json
+++ b/be/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
@@ -25,7 +26,7 @@
     "google-auth-library": "^9.14.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.8.4",
     "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.0",
     "natural": "^8.0.1",
