--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -53,6 +53,8 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "daisyui": "^4.12.20",
+    "tailwindcss": "^3.4.16"
   }
 }
