--- a/be/package.json
+++ b/be/package.json
@@ -31,6 +31,7 @@
     "natural": "^8.0.1",
     "node-tfidf": "^0.0.2",
     "nodemailer": "^6.9.15",
+    "socket.io": "^4.7.4",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
