--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-bootstrap-typeahead": "^6.3.4",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.7.1",
