--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -26,8 +26,10 @@
     "react-select": "^5.7.0",
     "react-toastify": "^9.1.1",
     "react-widgets": "^5.8.4",
+    "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^5.0.2"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
