--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap-typeahead": "^6.3.4",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
     "react-image-lightbox": "^5.1.4",
     "react-moment": "^1.1.3",
