--- a/admin-app/package.json
+++ b/admin-app/package.json
@@ -20,6 +20,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-moment": "^1.1.3",
     "react-multi-select-component": "^4.3.4",
+    "react-qr-reader": "^3.0.0-beta-1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
