--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
