--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "crypto-browserify": "^3.12.1",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "moment": "^2.30.1",
